# AI-Powered-Expense-Tracker

./: .gitignore  README.md  debug_db.js  docker-compose.yml  fix_wsl.ps1  init.sql  setup-tailwind.sh  start_app.py
Plan/: COMPARISON_CLOSED_VS_OPEN_SOURCE.md  COPY_PASTE_CODE_SNIPPETS.md  FILE_MANIFEST.md  IMPLEMENTATION_TIMELINE.md  OPEN_SOURCE_EXPENSE_TRACKER_PLAN.md  QUICK_START_GUIDE.md  README.md  START_HERE.md
backend/: debug_db.js  package-lock.json  package.json  tsconfig.json
backend/scripts/: create-budgets-table.js  create-savings-table.js  migrate-and-seed.js  seed-dummy-data.js  setup-db.js
backend/src/: db.ts  server.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  budgets.ts  categories.ts  expenses.ts  savings.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AddGoalModal.jsx  AdvisorTab.jsx  BudgetCard.jsx  BudgetSection.jsx  CategoryBreakdown.jsx  ChatModule.jsx  CustomDatePicker.jsx  ExpensesPieChart.jsx  FinancialSummary.jsx  HoloCard.jsx  MonthlyBarChart.jsx  SavingsCard.jsx  SavingsSection.jsx  SpendingInsights.jsx  SpendingTrends.jsx  TransactionHistoryModal.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/src/store/: useAuthStore.js  useExpenseStore.js  useSavingsStore.js
ml-service/: pyproject.toml  requirements.txt
ml-service/app/: main.py
